fix unreadable text in synapse for gtk 3.14

--- a/common/gtk-3.0/3.14/_applications.scss
+++ b/common/gtk-3.0/3.14/_applications.scss
@@ -399,6 +399,11 @@ TotemGrilo.vertical GdMainView.frame {
 }
 
 //
+// Synapse
+//
+SynapseGuiViewDefault *:selected { background-color: $selected_bg_color; }
+
+//
 // Fallback Mode/Budgie Panel
 //
 .gnome-panel-menu-bar,
